modify the publication list

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 
           <!-- Publication 6 -->
 
-          <div class="col-lg-12 mb-4" data-aos="fade-up">
+          <!-- <div class="col-lg-12 mb-4" data-aos="fade-up">
             <div class="card border">
               <div class="card-body">
                 <h5 class="card-title">
@@ -235,7 +235,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
 
           <!-- Publication 5 -->
           <div class="col-lg-12 mb-4" data-aos="fade-up">
@@ -1015,6 +1015,7 @@ We wish the best for himself always.
 </body>
 
 </html>
+
 
 
 
