Update google scholar link

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <a href="https://www.instagram.com/farhan_shihab/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
 <!--          <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>-->
           <a href="https://www.linkedin.com/in/farhanshihab/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-          <a href="https://scholar.google.com/citations?user=9CZyAU0AAAAJ&hl=en&oi=sra" target="_blank"><i class="bx bxl-google"></i></a>
+          <a href="https://scholar.google.com/citations?user=UcUgqIwAAAAJ&hl=en&oi=sra" target="_blank"><i class="bx bxl-google"></i></a>
 
 
         </div>
@@ -1015,6 +1015,7 @@ We wish the best for himself always.
 </body>
 
 </html>
+
 
 
 
