Update news section

--- a/index.html
+++ b/index.html
@@ -114,19 +114,29 @@
         </div>
 
         <div class="row">
-          <!-- News Item 1 -->
+          <!-- News Item 5 -->
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mb-4" data-aos="fade-up">
             <div class="icon-box">
               <div class="icon"><i class="bi bi-newspaper"></i></div>
-              <h4 class="title">Paper Accepted at TRB 2026</h4>
+              <h4 class="title">Paper Accepted at IEEE Southestcon 2026</h4>
+              <p class="description">Accepted my paper on CPU Burst Forecasting and improve the latency using ML.</p>
+            </div>
+          </div>
+        
+        <!-- <div class="row"> -->
+          <!-- News Item 4 -->
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mb-4" data-aos="fade-up">
+            <div class="icon-box">
+              <div class="icon"><i class="bi bi-newspaper"></i></div>
+              <h4 class="title">Paper Accepted at IV 2026</h4>
               <p class="description">Published my paper on string stability analysis of stop and go wave using IDM and FollowerStopper Controller.</p>
             </div>
           </div>
-          
+          <!-- News Item 3 -->
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mb-4" data-aos="fade-up">
             <div class="icon-box">
               <div class="icon"><i class="bi bi-newspaper"></i></div>
-              <h4 class="title">Paper Accepted at IEEE ITSC 2025</h4>
+              <h4 class="title">Paper Presented at IEEE ITSC 2025</h4>
               <p class="description">Published my paper on the data-driven modeling of the car-following behavior for Electric Vehicle at IEEE ITSC 2025, Gold coast, Australia.</p>
             </div>
           </div>
@@ -140,14 +150,14 @@
             </div>
           </div>
 
-          <!-- News Item 3 -->
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mb-4" data-aos="fade-up" data-aos-delay="200">
+          <!-- News Item 1 -->
+          <!-- <div class="col-lg-4 col-md-6 d-flex align-items-stretch mb-4" data-aos="fade-up" data-aos-delay="200">
             <div class="icon-box">
               <div class="icon"><i class="bi bi-pen"></i></div>
               <h4 class="title">Submitted paper at IEEE MLCAD 2025 Symposium</h4>
-              <p class="description">Worked on CPU Burst Forecasting and improve the latency using ML</p>
+              <p class="description">Worked on CPU Burst Forecasting and improved the latency using ML</p>
             </div>
-          </div>
+          </div> -->
 
         </div>
 
@@ -1015,6 +1025,7 @@ We wish the best for himself always.
 </body>
 
 </html>
+
 
 
 
