modify the icon in news section

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
           <!-- News Item 5 -->
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mb-4" data-aos="fade-up">
             <div class="icon-box">
-              <div class="icon"><i class="bi bi-newspaper"></i></div>
+              <div class="icon"><i class="bi bi-megaphone"></i></div>
               <h4 class="title">Paper Accepted at IEEE Southestcon 2026</h4>
               <p class="description">Accepted my paper on CPU Burst Forecasting and improve the latency using ML.</p>
             </div>
@@ -127,7 +127,7 @@
           <!-- News Item 4 -->
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mb-4" data-aos="fade-up">
             <div class="icon-box">
-              <div class="icon"><i class="bi bi-newspaper"></i></div>
+              <div class="icon"><i class="bi bi-megaphone"></i></div>
               <h4 class="title">Paper Accepted at IV 2026</h4>
               <p class="description">Published my paper on string stability analysis of stop and go wave using IDM and FollowerStopper Controller.</p>
             </div>
@@ -135,7 +135,7 @@
           <!-- News Item 3 -->
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mb-4" data-aos="fade-up">
             <div class="icon-box">
-              <div class="icon"><i class="bi bi-newspaper"></i></div>
+              <div class="icon"><i class="bi bi-megaphone"></i></div>
               <h4 class="title">Paper Presented at IEEE ITSC 2025</h4>
               <p class="description">Published my paper on the data-driven modeling of the car-following behavior for Electric Vehicle at IEEE ITSC 2025, Gold coast, Australia.</p>
             </div>
@@ -1025,6 +1025,7 @@ We wish the best for himself always.
 </body>
 
 </html>
+
 
 
 
