added new publication

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 
           <!-- Publication 6 -->
 
-          <!-- <div class="col-lg-12 mb-4" data-aos="fade-up">
+          <div class="col-lg-12 mb-4" data-aos="fade-up">
             <div class="card border">
               <div class="card-body">
                 <h5 class="card-title">
@@ -245,7 +245,7 @@
                 </div>
               </div>
             </div>
-          </div> -->
+          </div>
 
           <!-- Publication 5 -->
           <div class="col-lg-12 mb-4" data-aos="fade-up">
@@ -1025,6 +1025,7 @@ We wish the best for himself always.
 </body>
 
 </html>
+
 
 
 
