Update paper accepted status

--- a/index.html
+++ b/index.html
@@ -345,9 +345,9 @@
             <div class="card-body">
               <h5 class="card-title">
                 <b>5.</b> <span class="text-primary fw-bold">Efficient CPU Burst Forecasting with Low-Latency Machine Learning Models</span>
-                <small class="text-muted">(under review, IEEE MLCAD 2025)</small>
+                <small class="text-muted">(Accepted, IEEE SoutheasCon 2026)</small>
               </h5>
-              <p><b>Md Nazmus Shakib</b>, Md Ashraf Hossain Ifty, <b>Md. Shihab Uddin</b>, Rahul Bhadani.</p>
+              <p>Md Nazmus Shakib, Md Ashraf Hossain Ifty, <b>Md. Shihab Uddin</b>, Rahul Bhadani.</p>
       <!--                <p><i>Submission Number: 61</i></p>-->
               <button class="btn btn-outline-primary btn-sm mt-2" type="button" data-bs-toggle="collapse" data-bs-target="#abstract5" aria-expanded="false" aria-controls="abstract5">
                 Abstract 📄
@@ -1025,6 +1025,7 @@ We wish the best for himself always.
 </body>
 
 </html>
+
 
 
 
