--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bi bi-megaphone"></i></div>
               <h4 class="title">Presented at IEEE UEMCON 2024</h4>
-              <p class="description">Published my paper on "Bangla SBERT" at IEEE UEMCON 2024 held in New York.</p>
+              <p class="description">Presented paper on "Bangla SBERT" at IEEE UEMCON 2024 held in New York.</p>
             </div>
           </div>
 
@@ -1025,6 +1025,7 @@ We wish the best for himself always.
 </body>
 
 </html>
+
 
 
 
