--- a/index.html
+++ b/index.html
@@ -497,11 +497,33 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Professional Experience</h2>
+          <h2>Work Experience</h2>
           <!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p> -->
         </div>
 
         <div class="row">
+
+
+          <div class="col-lg-6" data-aos="fade-up">
+            <div class="resume-item">
+              <h4>Graduate Teaching Assistant</h4><em>Uinversity of Alabama in Huntsville.</em>
+              <br></br>
+              <h5>January 2025 - Present</h5>
+              <p><em>I support and mentor students by delivering course content, facilitating lab sessions, and contributing to curriculum development </em></p>
+              
+              <ul>
+                <h6><em>Courses Supported:</em></h6>
+                <li>Computer Organization</li>
+                <li>Intro to Computer Programming for Engineering Lab</li>
+                <li> Operating System Lab</li>
+                <li> Intro to Software Engineering</li>
+                <li>Machine Learning for Engineering Applications</li>
+                <li>Signals and Systems for Computer Engineers</li>
+              </ul>
+            </div>
+ 
+          </div>
+          
           <div class="col-lg-6" data-aos="fade-up">
             <div class="resume-item">
               <h4>Senior Software Engineer</h4><em>Silicon Orchard Ltd.</em>
@@ -1025,6 +1047,7 @@ We wish the best for himself always.
 </body>
 
 </html>
+
 
 
 
