modify the publication section

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
             <div class="card border">
               <div class="card-body">
                 <h5 class="card-title">
-                  <b>1.</b> <a href="#" class="text-primary fw-bold" target="_blank">
+                  <a href="#" class="text-primary fw-bold" target="_blank">
                   	String Stability Analysis of Followerstopper for Mixed-Autonomy Vehicle Platoons
                   </a>, accepted at <i>IEEE IV 2026</i>
                 </h5>
@@ -252,7 +252,7 @@
             <div class="card border">
               <div class="card-body">
                 <h5 class="card-title">
-                  <b>1.</b> <a href="#" class="text-primary fw-bold" target="_blank">
+                  <a href="#" class="text-primary fw-bold" target="_blank">
                   Modeling Electric Vehicle Car-Following Behavior: Classical vs Machine Learning Approach
                   </a>, accepted at <i>IEEE ITSC 2025</i>
                 </h5>
@@ -275,7 +275,7 @@
             <div class="card border">
               <div class="card-body">
                 <h5 class="card-title">
-                  <b>2.</b> <a href="https://ieeexplore.ieee.org/abstract/document/10754765" class="text-primary fw-bold" target="_blank">
+                  <a href="https://ieeexplore.ieee.org/abstract/document/10754765" class="text-primary fw-bold" target="_blank">
                   Bangla SBERT - Sentence Embedding Using Multilingual Knowledge Distillation
                   </a>
                 </h5>
@@ -298,7 +298,7 @@
             <div class="card border">
               <div class="card-body">
                 <h5 class="card-title">
-                  <b>3.</b> <a href="https://ieeexplore.ieee.org/document/10055173" class="text-primary fw-bold" target="_blank">
+                  <a href="https://ieeexplore.ieee.org/document/10055173" class="text-primary fw-bold" target="_blank">
                   Semantic Topic Extraction from Bangla News Corpus Using LDA and BERT-LDA
                   </a>
                 </h5>
@@ -321,7 +321,7 @@
             <div class="card border">
               <div class="card-body">
                 <h5 class="card-title">
-                  <b>4.</b> <a href="https://dl.acm.org/doi/10.1145/3652037.3663943" class="text-primary fw-bold" target="_blank">
+                  <a href="https://dl.acm.org/doi/10.1145/3652037.3663943" class="text-primary fw-bold" target="_blank">
                   A Cross-Domain Exploration of Audio and Textual Data for Multi-Modal Emotion Detection
                   </a>
                 </h5>
@@ -344,7 +344,7 @@
           <div class="card border">
             <div class="card-body">
               <h5 class="card-title">
-                <b>5.</b> <span class="text-primary fw-bold">Efficient CPU Burst Forecasting with Low-Latency Machine Learning Models</span>
+                <span class="text-primary fw-bold">Efficient CPU Burst Forecasting with Low-Latency Machine Learning Models</span>
                 <small class="text-muted">(Accepted, IEEE SoutheasCon 2026)</small>
               </h5>
               <p>Md Nazmus Shakib, Md Ashraf Hossain Ifty, <b>Md. Shihab Uddin</b>, Rahul Bhadani.</p>
@@ -1047,6 +1047,7 @@ We wish the best for himself always.
 </body>
 
 </html>
+
 
 
 
