--- a/index.html
+++ b/index.html
@@ -521,9 +521,8 @@
                 <li>Signals and Systems for Computer Engineers</li>
               </ul>
             </div>
- 
           </div>
-          
+    
           <div class="col-lg-6" data-aos="fade-up">
             <div class="resume-item">
               <h4>Senior Software Engineer</h4><em>Silicon Orchard Ltd.</em>
@@ -555,6 +554,7 @@
                 <li>Construct an efficient inference engine using Streamlit for real-time sentiment detection in both audio and text modalities.</li>
               </ul>
             </div>
+          </div>
             <div class="resume-item">
               <h4>Software Engineer (NLP)</h4><em>Technometrics Limited</em>
               <br></br>
@@ -1047,6 +1047,7 @@ We wish the best for himself always.
 </body>
 
 </html>
+
 
 
 
