--- a/index.html
+++ b/index.html
@@ -521,9 +521,9 @@
                 <li>Signals and Systems for Computer Engineers</li>
               </ul>
             </div>
-          </div>
+          <!-- </div>
     
-          <div class="col-lg-6" data-aos="fade-up">
+          <div class="col-lg-6" data-aos="fade-up"> -->
             <div class="resume-item">
               <h4>Senior Software Engineer</h4><em>Silicon Orchard Ltd.</em>
               <br></br>
@@ -555,6 +555,7 @@
               </ul>
             </div>
           </div>
+          <divclass="col-lg-6" data-aos="fade-up">
             <div class="resume-item">
               <h4>Software Engineer (NLP)</h4><em>Technometrics Limited</em>
               <br></br>
@@ -579,9 +580,9 @@
 
               </ul>
             </div>
-          </div>
+          <!-- </div>
 
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100"> -->
             <div class="resume-item">
               <h4>Junior Machine Learning</h4><em>Ishraak Solutions Limited</em>
               <br></br>
@@ -1047,6 +1048,7 @@ We wish the best for himself always.
 </body>
 
 </html>
+
 
 
 
