modify the resume

--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
             </div>
           <!-- </div>
     
-          <div class="col-lg-6" data-aos="fade-up"> -->
+          <!-- <div class="col-lg-6" data-aos="fade-up"> --> -->
             <div class="resume-item">
               <h4>Senior Software Engineer</h4><em>Silicon Orchard Ltd.</em>
               <br></br>
@@ -555,7 +555,7 @@
               </ul>
             </div>
           </div>
-          <divclass="col-lg-6" data-aos="fade-up">
+          <div class="col-lg-6" data-aos="fade-up">
             <div class="resume-item">
               <h4>Software Engineer (NLP)</h4><em>Technometrics Limited</em>
               <br></br>
@@ -582,7 +582,7 @@
             </div>
           <!-- </div>
 
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100"> -->
+          <!-- <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100"> -->
             <div class="resume-item">
               <h4>Junior Machine Learning</h4><em>Ishraak Solutions Limited</em>
               <br></br>
@@ -634,39 +634,6 @@
             </div>
             <div class="resume-item"><h6><b>Bangla</b><em>, Native</em></h6></div>
           </div>
-
-            <!-- Certification section -->
-<!--            <h3 class="resume-title">Certification</h3>-->
-<!--            <div class="resume-item">-->
-<!--              <h6><b>MySQL For Beginners From-->
-<!--                Scratch</b><em>, 365 Data Science</em></h6>-->
-<!--            </div>-->
-<!--            <div class="resume-item">-->
-<!--              <h6><b>Building Recommendation Engines-->
-<!--                in Python</b><em>, Coursera</em></h6>-->
-<!--            </div>-->
-<!--            <div class="resume-item">-->
-<!--              <h6><b>Data Engineering For-->
-<!--                Everyone</b><em>, Coursera</em></h6>-->
-<!--            </div>-->
-<!--            <div class="resume-item">-->
-<!--              <h6><b>Improving Deep Neural Networks:-->
-<!--                Hyper-->
-<!--                parameter tuning, Regularization-->
-<!--                and-->
-<!--                Optimization</b><em>, Coursera</em></h6>-->
-<!--            </div>-->
-<!--            <div class="resume-item">-->
-<!--              <h6><b>Python Data Structure</b><em>, Coursera</em></h6>-->
-<!--            </div>-->
-<!--            <div class="resume-item">-->
-<!--              <h6><b>Neural Network and Deep-->
-<!--                Learning</b><em>, Coursera</em></h6>-->
-<!--            </div>-->
-            <!-- Certification section end -->
-            <!-- Language section Start -->
-
-            <!-- Language section End -->
           </div>
 
         </div>
@@ -1048,6 +1015,7 @@ We wish the best for himself always.
 </body>
 
 </html>
+
 
 
 
