modify the reusme section

--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
                 <li>Signals and Systems for Computer Engineers</li>
               </ul>
             </div>
-          <!-- </div>
+          <!-- <!-- </div> -->
     
           <!-- <div class="col-lg-6" data-aos="fade-up"> --> -->
             <div class="resume-item">
@@ -553,6 +553,21 @@
                 <li>Build accurate audio and text classification models with a target accuracy of 84% and 73%, respectively, using advanced sequence learning techniques</li>
                 <li>Construct an efficient inference engine using Streamlit for real-time sentiment detection in both audio and text modalities.</li>
               </ul>
+            </div>
+
+            <!-- Extra Caricular Activites -->
+            <h3 class="resume-title">Extra Caricular Activites</h3>
+            <div class="resume-item">
+              <h6><b>President</b><em>, Comilla University IT Soceity</em></h6>
+              <h5>2020 - 2021</h5>
+            </div>
+            <div class="resume-item">
+              <h6><b>Joint Secretary</b><em>, ICT Association, Dept. Of ICT</em></h6>
+              <h5>2019 - 2020</h5>
+            </div>
+            <div class="resume-item">
+              <h6><b>Radio Jockey</b><em>, RadioCou</em></h6>
+              <h5>2018 - 2020</h5>
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up">
@@ -609,20 +624,7 @@
 
               </ul>
             </div>
-            <!-- Extra Caricular Activites -->
-            <h3 class="resume-title">Extra Caricular Activites</h3>
-            <div class="resume-item">
-              <h6><b>President</b><em>, Comilla University IT Soceity</em></h6>
-              <h5>2020 - 2021</h5>
-            </div>
-            <div class="resume-item">
-              <h6><b>Joint Secretary</b><em>, ICT Association, Dept. Of ICT</em></h6>
-              <h5>2019 - 2020</h5>
-            </div>
-            <div class="resume-item">
-              <h6><b>Radio Jockey</b><em>, RadioCou</em></h6>
-              <h5>2018 - 2020</h5>
-            </div>
+            
             <h3 class="resume-title">Language Proficiency</h3>
             <div class="resume-item"><h6><b>English</b><em>, Overall 6.5</em></h6>
             <ul>
@@ -1015,6 +1017,7 @@ We wish the best for himself always.
 </body>
 
 </html>
+
 
 
 
