Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
               <p><em>I support and mentor students by delivering course content, facilitating lab sessions, and contributing to curriculum development </em></p>
               
               <ul>
-                <h6><em>Courses Supported:</em></h6>
+                <h6><b>Courses Supported</b></h6>
                 <li>Computer Organization</li>
                 <li>Intro to Computer Programming for Engineering Lab</li>
                 <li> Operating System Lab</li>
@@ -521,9 +521,9 @@
                 <li>Signals and Systems for Computer Engineers</li>
               </ul>
             </div>
-          <!-- <!-- </div> -->
+          <!--  </div> -->
     
-          <!-- <div class="col-lg-6" data-aos="fade-up"> --> -->
+          <!-- <div class="col-lg-6" data-aos="fade-up"> -->
             <div class="resume-item">
               <h4>Senior Software Engineer</h4><em>Silicon Orchard Ltd.</em>
               <br></br>
@@ -1017,6 +1017,7 @@ We wish the best for himself always.
 </body>
 
 </html>
+
 
 
 
